formatting, imports and code merges from maintenance